--- a/site/index.html
+++ b/site/index.html
@@ -2,7 +2,7 @@
 <html>
 <meta charset="utf-8">
 <head>
-	<title>Menu</title>
+	<title>Module 3 Assignment</title>
 </head>
 <body>
 <h1>Our Menu</h1>
