--- a/site/index.html
+++ b/site/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
-<meta charset="utf-8">
 <head>
+<meta charset="utf-8">
 	<title>Module 3 Assignment</title>
+<link rel="Stylesheet" href="Stylesheet.css">
 </head>
 <body>
 <h1>Our Menu</h1>
@@ -11,4 +12,5 @@
 Adipiscing tristique velit ex faucibus enim. Donec nec. Neque ac quisque ante eros erat, justo in sodales, pellentesque tortor, mattis pellentesque felis accumsan. Pulvinar imperdiet, lobortis amet semper mauris scelerisque consectetuer, tellus at, neque sit vitae vehicula tellus pharetra amet. Odio nunc semper placerat laoreet sed aliquam, incidunt natoque mi interdum sapien posuere tincidunt, massa urna volutpat.
 Sed gravida orci gravida quis mollis elit, urna pellentesque rhoncus aliquam, qui arcu vitae ipsum risus in, molestie facilisis vitae scelerisque cum morbi sed, ridiculus vivamus pellentesque praesent. At libero arcu, voluptatem suspendisse volutpat in a wisi, nonummy lectus animi amet nibh et adipiscing, placeat turpis ornare nulla bibendum fusce. Condimentum diam. Pede vestibulum eleifend nec. In vel dui, natoque quisque, lectus arcu senectus turpis sed lorem ut, id et in justo imperdiet nulla, nibh purus tellus. Mauris pulvinar pellentesque mauris erat cras, arcu dui semper sem sed, suspendisse interdum. Curabitur vitae mauris ornare adipiscing aliquam tempor, eu mollis pharetra tortor vulputate aliquet, congue sit lectus consectetuer viverra sapien dolor. Lacus cillum ac, nulla massa tellus eget non in, sagittis accumsan duis mattis bibendum curabitur. Non facilisi libero sit et nec donec, eget eros morbi, dolor elit phasellus praesent. Ultricies viverra fusce, eu volutpat nullam bibendum ultrices, ornare nam duis vel, platea ante lacinia mus, purus id congue quisque. Vitae aliquam, a neque lorem lectus duis.</div>
 </body>
+</link>
 </html>
