--- a/site/index.html
+++ b/site/index.html
@@ -3,10 +3,25 @@
 <head>
 <meta charset="utf-8">
 	<title>Module 3 Assignment</title>
+<link rel="stylesheet" href="css/bootstrap.min.css">	
 <link rel="Stylesheet" href="Stylesheet.css">
 </head>
 <body>
-<h1>Our Menu</h1>
+ <header>
+ 	<nav id="header-nav" class="navbar navbar-default">
+ 	 <div class="container">
+ 	  <div class="navbar-header">
+ 	   <a href="index.html" class="pull-left">
+ 	    <div id="logo-img" alt="Logo image"></div>
+ 	    </a>
+ 	    <div class="navbar-brand">
+ 	     <a href="index.html"><h1>Food, LLC</h1></a>
+ 	   </div>
+ 	    </div>
+ 	 </div>
+ 	 </nav>
+ </header>
+<h2>Our Menu</h2>
 <a href="https://www.tumblr.com" target="_blank" title="Land of Oddities"><img src="https://67.media.tumblr.com/9d443daf21f206657f7aa68e46c88db1/tumblr_o8a0a6eeyg1tsx1g4o1_1280.jpg" width="500px"> </a>
 <div>Lorem ipsum dolor sit amet, enim pede tortor erat mi eros varius, fusce ornare, ante ac sed non quasi donec gravida, bibendum donec phasellus. Fermentum nullam mi repudiandae, aliquam et dis integer commodo congue. Wisi orci sit nulla faucibus ligula, consectetuer quisque nulla nunc ridiculus erat, eget eu metus ut nonummy. Lorem velit urna morbi. In sed, mattis tincidunt non nulla, pulvinar fringilla massa dapibus quisque risus. Adipiscing diam consectetuer felis. Et nascetur eros ullamcorper elit sapien pellentesque, arcu scelerisque magna pede, porttitor amet eget suscipit libero, litora auctor tempor tortor ipsum vitae. Condimentum iste. Urna cursus augue mauris cursus in, at quam nullam parturient sodales, blandit justo eu risus, dignissimos eget.
 Adipiscing tristique velit ex faucibus enim. Donec nec. Neque ac quisque ante eros erat, justo in sodales, pellentesque tortor, mattis pellentesque felis accumsan. Pulvinar imperdiet, lobortis amet semper mauris scelerisque consectetuer, tellus at, neque sit vitae vehicula tellus pharetra amet. Odio nunc semper placerat laoreet sed aliquam, incidunt natoque mi interdum sapien posuere tincidunt, massa urna volutpat.
