--- a/site/index.html
+++ b/site/index.html
@@ -24,6 +24,26 @@
  	   	<span class="icon-bar"></span>
  	   </button>
  	    </div>
+ 	 <div id="collapsable-nav" class="collapse navbar-collapse">
+ 	 	<ul id="nav-list" class="nav navbar-nav navbar-right">
+ 	 		<li>
+ 	 			<a href="menu-catergories.html">
+ 	 			 <span class="glyphicon glyphicon-glass"></span><br class="hidden-xs"> Menu</a>
+ 	 		</li>
+ 	 		<li>
+ 	 			<a href="#">
+ 	 			<span class="glyphicon glyphicon-info-heart"></span><br class="hidden-xs"> About </a>
+ 	 		</li>
+ 	 		<li>
+ 	 			<a href="#">
+ 	 			<span class="glyphicon glyphicon-music"></span><br class="hidden-xs"> Awards</a>
+ 	 		</li>
+ 	 		<li id="phone" class="hidden-xs">
+ 	 			<a href="tel:303-555-1234">
+ 	 			<span>303-555-1234</span></a><div>* We Deliver</div>
+ 	 		</li>
+ 	 	</ul>
+ 	 </div>
  	 </div>
  	 </nav>
  </header>
