--- a/site/index.html
+++ b/site/index.html
@@ -28,15 +28,15 @@
  	 	<ul id="nav-list" class="nav navbar-nav navbar-right">
  	 		<li>
  	 			<a href="menu-catergories.html">
- 	 			 <span class="glyphicon glyphicon-glass"></span><br class="hidden-xs"> Menu</a>
+ 	 			 <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
  	 		</li>
  	 		<li>
  	 			<a href="#">
- 	 			<span class="glyphicon glyphicon-info-heart"></span><br class="hidden-xs"> About </a>
+ 	 			<span class="glyphicon glyphicon-info"></span><br class="hidden-xs"> About </a>
  	 		</li>
  	 		<li>
  	 			<a href="#">
- 	 			<span class="glyphicon glyphicon-music"></span><br class="hidden-xs"> Awards</a>
+ 	 			<span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Awards</a>
  	 		</li>
  	 		<li id="phone" class="hidden-xs">
  	 			<a href="tel:303-555-1234">
