--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,7 @@
 	<title>Module 3 Assignment</title>
 <link rel="stylesheet" href="css/bootstrap.min.css">	
 <link rel="Stylesheet" href="Stylesheet.css">
+<link rel="stylesheet" href="js/bootstrap.js">
 </head>
 <body>
  <header>
