--- a/site/index.html
+++ b/site/index.html
@@ -1,68 +1,60 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>David Chu's China Bistro</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
-  </head>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+	<title>Module 3 Assignment</title>
+<link rel="stylesheet" href="css/bootstrap.min.css">	
+<link rel="Stylesheet" href="Stylesheet.css">
+</head>
 <body>
-  <header>
-    <nav id="header-nav" class="navbar navbar-default">
-      <div class="container">
-        <div class="navbar-header">
-          <a href="index.html" class="pull-left visible-md visible-lg">
-            <div id="logo-img"></div>
-          </a>
-
-          <div class="navbar-brand">
-            <a href="index.html"><h1>David Chu's China Bistro</h1></a>
-            <p>
-              <img src="images/star-k-logo.png" alt="Kosher certification">
-              <span>Kosher Certified</span>
-            </p>
-          </div>
-
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-
-        <div id="collapsable-nav" class="collapse navbar-collapse">
-           <ul id="nav-list" class="nav navbar-nav navbar-right">
-            <li>
-              <a href="menu-categories.html">
-                <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> About</a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Awards</a>
-            </li>
-            <li id="phone" class="hidden-xs">
-              <a href="tel:410-602-5008">
-                <span>410-602-5008</span></a><div>* We Deliver</div>
-            </li>
-          </ul><!-- #nav-list -->
-        </div><!-- .collapse .navbar-collapse -->
-      </div><!-- .container -->
-    </nav><!-- #header-nav -->
-  </header>
-
-
-  <!-- jQuery (Bootstrap JS plugins depend on it) -->
-  <script src="js/jquery-2.1.4.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/script.js"></script>
+ <header>
+ 	<nav id="header-nav" class="navbar navbar-default">
+ 	 <div class="container">
+ 	  <div class="navbar-header">
+ 	   <a href="index.html" class="pull-left">
+ 	    <div id="logo-img" alt="Logo image"></div>
+ 	    </a>
+ 	    <div class="navbar-brand">
+ 	     <a href="index.html"><h1>Food, LLC</h1></a>
+ 	   </div>
+ 	   <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+ 	   	<span class="sr-only">Toggle navigation</span>
+ 	   	<span class="icon-bar"></span>
+ 	   	<span class="icon-bar"></span>
+ 	   	<span class="icon-bar"></span>
+ 	   </button>
+ 	    </div>
+ 	 <div id="collapsable-nav" class="collapse navbar-collapse">
+ 	 	<ul id="nav-list" class="nav navbar-nav navbar-right">
+ 	 		<li>
+ 	 			<a href="menu-categories.html">
+ 	 			 <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
+ 	 		</li>
+ 	 		<li>
+ 	 			<a href="#">
+ 	 			<span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> About </a>
+ 	 		</li>
+ 	 		<li>
+ 	 			<a href="#">
+ 	 			<span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Awards</a>
+ 	 		</li>
+ 	 		<li id="phone" class="hidden-xs">
+ 	 			<a href="tel:303-555-1234">
+ 	 			<span>303-555-1234</span></a><div>* We Deliver</div>
+ 	 		</li>
+ 	 	</ul>
+ 	 </div>
+ 	 </div>
+ 	 </nav>
+ </header>
+<h2>Our Menu</h2>
+<div id="cherry"><a href="https://www.tumblr.com" target="_blank" title="Land of Oddities"><img src="https://67.media.tumblr.com/9d443daf21f206657f7aa68e46c88db1/tumblr_o8a0a6eeyg1tsx1g4o1_1280.jpg" width="500px"> </a></div>
+<div id="text">Lorem ipsum dolor sit amet, enim pede tortor erat mi eros varius, fusce ornare, ante ac sed non quasi donec gravida, bibendum donec phasellus. Fermentum nullam mi repudiandae, aliquam et dis integer commodo congue. Wisi orci sit nulla faucibus ligula, consectetuer quisque nulla nunc ridiculus erat, eget eu metus ut nonummy. Lorem velit urna morbi. In sed, mattis tincidunt non nulla, pulvinar fringilla massa dapibus quisque risus. Adipiscing diam consectetuer felis. Et nascetur eros ullamcorper elit sapien pellentesque, arcu scelerisque magna pede, porttitor amet eget suscipit libero, litora auctor tempor tortor ipsum vitae. Condimentum iste. Urna cursus augue mauris cursus in, at quam nullam parturient sodales, blandit justo eu risus, dignissimos eget.
+Adipiscing tristique velit ex faucibus enim. Donec nec. Neque ac quisque ante eros erat, justo in sodales, pellentesque tortor, mattis pellentesque felis accumsan. Pulvinar imperdiet, lobortis amet semper mauris scelerisque consectetuer, tellus at, neque sit vitae vehicula tellus pharetra amet. Odio nunc semper placerat laoreet sed aliquam, incidunt natoque mi interdum sapien posuere tincidunt, massa urna volutpat.
+Sed gravida orci gravida quis mollis elit, urna pellentesque rhoncus aliquam, qui arcu vitae ipsum risus in, molestie facilisis vitae scelerisque cum morbi sed, ridiculus vivamus pellentesque praesent. At libero arcu, voluptatem suspendisse volutpat in a wisi, nonummy lectus animi amet nibh et adipiscing, placeat turpis ornare nulla bibendum fusce. Condimentum diam. Pede vestibulum eleifend nec. In vel dui, natoque quisque, lectus arcu senectus turpis sed lorem ut, id et in justo imperdiet nulla, nibh purus tellus. Mauris pulvinar pellentesque mauris erat cras, arcu dui semper sem sed, suspendisse interdum. Curabitur vitae mauris ornare adipiscing aliquam tempor, eu mollis pharetra tortor vulputate aliquet, congue sit lectus consectetuer viverra sapien dolor. Lacus cillum ac, nulla massa tellus eget non in, sagittis accumsan duis mattis bibendum curabitur. Non facilisi libero sit et nec donec, eget eros morbi, dolor elit phasellus praesent. Ultricies viverra fusce, eu volutpat nullam bibendum ultrices, ornare nam duis vel, platea ante lacinia mus, purus id congue quisque. Vitae aliquam, a neque lorem lectus duis.</div>
+<script src="js/jquery-2.1.4.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/script.js"></script>
 </body>
+</link>
 </html>
