--- a/site/index.html
+++ b/site/index.html
@@ -18,7 +18,7 @@
  	    <div class="navbar-brand">
  	     <a href="index.html"><h1>Food, LLC</h1></a>
  	   </div>
- 	   <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+ 	   <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false" aria-controls="collapseExample">
  	   	<span class="sr-only">Toggle navigation</span>
  	   	<span class="icon-bar"></span>
  	   	<span class="icon-bar"></span>
@@ -43,6 +43,7 @@
  	 			<span>303-555-1234</span></a><div>* We Deliver</div>
  	 		</li>
  	 	</ul>
+ 	 </div>
  	 </div>
  	 <div class="dropdown">
   <button id="dLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
