--- a/site/index.html
+++ b/site/index.html
@@ -24,7 +24,9 @@
  	   	<span class="icon-bar"></span>
  	   	<span class="icon-bar"></span>
  	   </button>
+ 	   </div>
  	 <div id="collapsable-nav" class="collapse navbar-collapse">
+ 	 <div class="well">
  	 	<ul id="nav-list" class="nav navbar-nav navbar-right">
  	 		<li>
  	 			<a href="menu-categories.html">
