--- a/site/index.html
+++ b/site/index.html
@@ -57,7 +57,28 @@
  	 </nav>
  </header>
 <h2>Our Menu</h2>
-<div id="cherry"><a href="https://www.tumblr.com" target="_blank" title="Land of Oddities"><img src="https://67.media.tumblr.com/9d443daf21f206657f7aa68e46c88db1/tumblr_o8a0a6eeyg1tsx1g4o1_1280.jpg" alt="image"> </a></div>
+<div id="cherry" class="container">
+<div class="jumbotron">
+<a href="https://www.tumblr.com" target="_blank" title="Land of Oddities"><img src="https://67.media.tumblr.com/9d443daf21f206657f7aa68e46c88db1/tumblr_o8a0a6eeyg1tsx1g4o1_1280.jpg" width="500px" alt="image" class="img-responsive visible-xs"> </a></div>
+<div id="home-tiles" class="row">
+ <div class="col-md-4 col-sm-6 col-xs-12">
+    <a href="menu-categories.html" target="_blank"><div id="menu-tile"><span>
+    menu</span></div></a>
+    </div>
+    <div class="col-md-4 col-sm-6 col-xs-12">
+       <a href="single-category.html"><div id="specials-tile"><span>specials</span></div></a>
+       </div>
+    <div class="col-md-4 col-sm-12 col-xs-12">
+        <a href="" target="_blank">
+        	 <div id="map-tile">
+        	 	
+        	 	<span>map</span>
+        	 </div>
+        </a>
+    </div>
+ </div>
+    </div>
+
 
 <div id="text">Lorem ipsum dolor sit amet, enim pede tortor erat mi eros varius, fusce ornare, ante ac sed non quasi donec gravida, bibendum donec phasellus. Fermentum nullam mi repudiandae, aliquam et dis integer commodo congue. Wisi orci sit nulla faucibus ligula, consectetuer quisque nulla nunc ridiculus erat, eget eu metus ut nonummy. Lorem velit urna morbi. In sed, mattis tincidunt non nulla, pulvinar fringilla massa dapibus quisque risus. Adipiscing diam consectetuer felis. Et nascetur eros ullamcorper elit sapien pellentesque, arcu scelerisque magna pede, porttitor amet eget suscipit libero, litora auctor tempor tortor ipsum vitae. Condimentum iste. Urna cursus augue mauris cursus in, at quam nullam parturient sodales, blandit justo eu risus, dignissimos eget.
 Adipiscing tristique velit ex faucibus enim. Donec nec. Neque ac quisque ante eros erat, justo in sodales, pellentesque tortor, mattis pellentesque felis accumsan. Pulvinar imperdiet, lobortis amet semper mauris scelerisque consectetuer, tellus at, neque sit vitae vehicula tellus pharetra amet. Odio nunc semper placerat laoreet sed aliquam, incidunt natoque mi interdum sapien posuere tincidunt, massa urna volutpat.
