--- a/site/index.html
+++ b/site/index.html
@@ -110,7 +110,7 @@ Sed gravida orci gravida quis mollis elit, urna pellentesque rhoncus aliquam, qu
 	</div>
 </footer>
 <script src="js/jquery-3.3.7.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/script.js"></script>
+<script src="bootstrap.min.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
